<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:strokeWidth="2dp"
    app:strokeColor="@color/stroke_color"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/game1_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textSize="20sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/game_detail_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:src="@drawable/checkerboard"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/game_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/game1_description" />

    <Button
        android:id="@+id/remove_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remove_this_game" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/share"
        style="?attr/materialButtonOutlinedStyle" />
    <Button
        android:id="@+id/findBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/find"
        style="?attr/materialButtonOutlinedStyle" />
    <Button
        android:id="@+id/sendBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send"
        style="?attr/materialButtonOutlinedStyle" />
</LinearLayout>
</com.google.android.material.card.MaterialCardView>